# inplace

./: .gitignore  .travis.yml  CHANGELOG.md  LICENSE  MANIFEST.in  README.rst  TODO.md  in_place.py  inplace.py  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: test.yml
src/: in_place.py
src/in_place/: __init__.py
test/: test_bytes.py  test_deprecated.py  test_encoding.py  test_errors.py  test_general.py  test_in_place_util.py  test_inplace.py  test_inplace_move_first.py  test_inplace_utf8.py  test_inplace_util.py  test_io_methods.py  test_move_first.py  test_nonstr_path.py  test_py2.py  test_py2print.py  test_py3.py  test_symlinks.py  test_utf8.py
