[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "in_place"
dynamic = ["version"]
description = "In-place file processing"
readme = "README.rst"
requires-python = ">=3.8"
license = "MIT"
license-files = { paths = ["LICENSE"] }
authors = [
    { name = "John Thorvald Wodder II", email = "inplace@varonathe.org" }
]

keywords = [
    "inplace",
    "in-place",
    "io",
    "open",
    "file",
    "tmpfile",
    "tempfile",
    "sed",
    "redirection",
    "fileinput",
]

classifiers = [
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Developers",
    "Topic :: System :: Filesystems",
    "Topic :: Text Processing :: Filters",
    "Typing :: Typed",
]

dependencies = []

[project.urls]
"Source Code" = "https://github.com/jwodder/inplace"
"Bug Tracker" = "https://github.com/jwodder/inplace/issues"

[tool.hatch.version]
path = "src/in_place/__init__.py"

[tool.hatch.build.targets.sdist]
include = [
    "/docs",
    "/src",
    "/test",
    "CHANGELOG.*",
    "CONTRIBUTORS.*",
    "tox.ini",
]

[tool.hatch.envs.default]
python = "3"

[tool.mypy]
allow_incomplete_defs = false
allow_untyped_defs = false
ignore_missing_imports = false
# <https://github.com/python/mypy/issues/7773>:
no_implicit_optional = true
implicit_reexport = false
local_partial_types = true
pretty = true
show_error_codes = true
show_traceback = true
strict_equality = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
