[aliases]
make = sdist bdist_wheel

[bdist_wheel]
universal = 1

[metadata]
name = in_place
#version = # Set in setup.py
description = In-place file processing
long_description = file:README.rst
long_description_content_type = text/x-rst
author = John Thorvald Wodder II
author_email = inplace@varonathe.org
license = MIT
license_file = LICENSE
url = https://github.com/jwodder/inplace

keywords =
    inplace
    in-place
    io
    open
    file
    tmpfile
    tempfile
    sed
    redirection
    fileinput

classifiers =
    Development Status :: 4 - Beta
    #Development Status :: 5 - Production/Stable
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    License :: OSI Approved :: MIT License
    Intended Audience :: Developers
    Topic :: System :: Filesystems
    Topic :: Text Processing :: Filters

project_urls =
    Source Code = https://github.com/jwodder/inplace
    Bug Tracker = https://github.com/jwodder/inplace/issues
    Say Thanks! = https://saythanks.io/to/jwodder

[options]
py_modules = in_place
python_requires = >=2.7, !=3.0.*, !=3.1.*, !=3.2.*, !=3.3.*, <4
install_requires =
