[metadata]
name = in_place
version = attr:in_place.__version__
description = In-place file processing
long_description = file:README.rst
long_description_content_type = text/x-rst
author = John Thorvald Wodder II
author_email = inplace@varonathe.org
license = MIT
license_files = LICENSE
url = https://github.com/jwodder/inplace

keywords =
    inplace
    in-place
    io
    open
    file
    tmpfile
    tempfile
    sed
    redirection
    fileinput

classifiers =
    Development Status :: 4 - Beta
    #Development Status :: 5 - Production/Stable
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    License :: OSI Approved :: MIT License
    Intended Audience :: Developers
    Topic :: System :: Filesystems
    Topic :: Text Processing :: Filters

project_urls =
    Source Code = https://github.com/jwodder/inplace
    Bug Tracker = https://github.com/jwodder/inplace/issues

[options]
py_modules = in_place
package_dir =
    =src
python_requires = ~=3.6
